k8s/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drone-ingress
spec:
  rules:
    - host: 4cff-86-171-212-33.ngrok-free.app 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: drone-service
                port:
                  number: 80
